# oncotarget-lite

./: Dockerfile.cpu  Dockerfile.cuda  ENHANCEMENTS.md  Makefile  README.md  __init__.py  ablations.py  automated_retraining.py  cli.py  comparison_criteria.json  config.example.yaml  config.py  data.py  data_quality.py  demo_advanced_features.py  demo_automated_retraining.py  demo_dashboard.py  demo_deep_learning.py  demo_experimentation.py  demo_model_comparison.py  demo_model_serving.py  demo_modern_models.py  demo_optimization.py  dependencies.py  distributed.py  dvc.yaml  environment.yml  eval.py  exceptions.py  experiment_config.json  experimentation.py  explain.py  feature_validation.py  feedback.py  health.py  interpretability_dashboard.py  logging_config.py  metrics_basic.json  middleware.py  mkdocs.yml  (+25 more)
app/: streamlit_app.py
artifacts/: mlp_binary_model_metrics.json
conf/: config.yaml  experiment.yaml
conf/model/: lgb.yaml  logreg.yaml  xgb.yaml
configs/: comparison_criteria.json  config.yaml  core.yaml  data.yaml  eval.yaml  paths.yaml  retrain_config.json  train_cnn.yaml  train_mil.yaml  train_vit.yaml  training.yaml
configs/ablations/: advanced_features.yaml  all_features.yaml  clinical_only.yaml  gnn.yaml  lgb.yaml  logreg.yaml  mlp.yaml  network_only.yaml  transformer.yaml  xgb.yaml
configs/mode/: fast_debug.yaml  full.yaml
data/cache/: all_advanced_features_advanced_features_-3618759.parquet  all_advanced_features_advanced_features_60070005.parquet  all_advanced_features_test_features_fresh.parquet
data/processed/: features.parquet  labels.parquet  splits.json
data/raw/: DepMap_essentials_subset.csv  GTEx_subset.csv  TCGA_subset.csv  alphafold_structures.txt  annotations.csv  expression.csv  homologs.txt  kegg_pathways.txt  pfam_domains.txt  physicochemical_properties.txt  ppi_degree_subset.csv  ppi_network.txt  uniprot_annotations.csv
data/test/: dependencies.csv
deployment/: __init__.py  model_loader.py  prediction_service.py
docs/: ablations.md  changelog.md  cli.md  data-schema.md  index.md  install.md  interpretability.md  limits.md  metrics_raw.json  metrics_summary.json  model-card.md  model_card.md  monitoring.md  pipeline.md  quickstart.md  reproduce.md  reproducibility.md  triage_ui.md
experimentation/: __init__.py  dashboard.py  manager.py  optimizer.py  schemas.py
features/: __init__.py  base.py  orchestrator.py  ppi_features.py
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: raw_clinical_trials_checkpoint.yml
great_expectations/expectations/: raw_clinical_trials_suite.json
kubernetes/: deployment-canary.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service-canary.yaml  service-stable.yaml  service.yaml
mlruns/0/: meta.yaml
mlruns/627206513233916258/: meta.yaml
models/: feature_list.json  logreg_pipeline.pkl
notebooks/: 01_data_mining_checks.ipynb  03_model_training.ipynb
oncotarget-lite/: Dockerfile  Makefile  README.md  environment.yml  pyproject.toml
oncotarget-lite/app/: streamlit_app.py
oncotarget-lite/artifacts/: fttransformer_binary_model.pt  fttransformer_binary_model_metrics.json  mlp_binary_model.pt  test_encoder.pt
oncotarget-lite/data/raw/: TCGA_subset.csv
oncotarget-lite/eval_results/: evaluation_metrics.json  model_info.json  predictions.csv
oncotarget-lite/notebooks/: 01_data_mining_checks.ipynb  02_target_scoring_demo.ipynb  03_model_training.ipynb
oncotarget-lite/src/oncotarget/: __init__.py  eval.py  evaluate.py  features.py  io.py  ssl_mgm.py
oncotarget-lite/tests/: test_fttransformer.py  test_io.py
oncotarget_lite/: __init__.py  __main__.py  _version.py  ablations.py  ablations_eval.py  app.py  cli.py  config.py  data.py  distributed.py  eval.py  exceptions.py  experimentation.py  explain.py  interpretability_validation.py  logging_utils.py  mlflow_utils.py  model.py  model_card.md  model_card_template.md  model_comparison.py  model_deployment.py  model_server.py  monitoring.py  performance.py  reporting.py  scalable_loader.py  scalable_orchestrator.py  schemas.py  streamlit_app.py  streamlit_capture.py  utils.py
oncotarget_lite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
oncotarget_lite/evaluation/: __init__.py  bootstrap.py
oncotarget_lite/features/: __init__.py  conservation_features.py  domain_features.py  (+3 more)
pages/: 1_📈_Monitoring_Report.py  2_✅_Data_Validation.py  3_📜_Model_Card.py  4_🔬_Experiment_History.py  5_🧑‍🔬_User_Feedback.py  6_🎯_Business_KPIs.py
reports/: automated_retraining.db  example_target_report.md  run_context.json
scripts/: __init__.py  download_data.py  eval_small_benchmark.py  fetch_biological_data.py  fetch_data.py  gen_synthetic.py  generate_model_card.py  generate_synthetic_data.py  housekeeping.py  materialize_features.py  render_docs_metrics.py  run_data_validation.py  run_monitoring.py  security_scan.py  verify_requirements.py
shap/: alias_map.json
test_data/: features.parquet  labels.parquet  splits.json
test_models/: feature_list.json  logreg_pipeline.pkl
test_reports/: metrics_basic.json  optuna_summary_logreg.json  optuna_summary_xgb.json  predictions.parquet
tests/: conftest.py  fixtures.py  test_api_contract.py  test_bootstrap.py  test_bootstrap_comprehensive.py  test_calibration.py  test_cli.py  test_cli_comprehensive.py  test_cli_fast_modes.py  test_cli_help.py  test_cli_smoke.py  test_comprehensive.py  test_comprehensive_coverage.py  test_config.py  test_data.py  test_data_preparation.py  test_dependencies.py  test_device.py  test_explain_mock.py  test_feature_validation.py  test_features.py  test_ingestion_comments.py  test_logging.py  test_metrics.py  test_metrics_docs.py  test_ml_pipeline_integration.py  test_model.py  test_model_comprehensive.py  test_models.py  test_pipeline.py  test_reporting_comprehensive.py  test_reports.py  test_resilience_tools.py  test_retrieval_metrics.py  test_scoring.py  test_seed.py  test_synthetic_data.py  test_tiny_e2e.py  test_utils.py  test_utils_and_cli.py
trainers/: __init__.py  base.py  gnn.py  lgb.py  xgb.py
(+72 files in other folders)
