[build-system]
requires = ["setuptools>=68", "setuptools_scm>=8", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "oncotarget-lite"
dynamic = ["version"]
description = "Lean oncology target triage toolkit"
readme = "README.md"
license = { text = "MIT" }
authors = [
  {name = "Altalanta ML Platform"}
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "scikit-learn==1.5.2",
  "matplotlib==3.9.2",
  "mlflow==2.15.0",
  "dvc==3.55.2",
  "typer==0.9.0",
  "click==8.1.7",
  "shap==0.46.0",
  "jinja2==3.1.4",
  "playwright==1.47.0",
  "streamlit==1.38.0",
  "joblib==1.4.2",
  "scipy==1.13.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "ruff==0.6.8",
  "mypy==1.11.2",
]

[project.scripts]
oncotarget-lite = "oncotarget_lite.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["oncotarget_lite*"]

[tool.setuptools_scm]
write_to = "oncotarget_lite/_version.py"
write_to_template = "__version__ = \"{version}\"\n"
fallback_version = "0.0.0"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config --cov=oncotarget_lite --cov-report=term-missing"
testpaths = ["tests"]
filterwarnings = [
  "error::DeprecationWarning",
  "ignore::UserWarning:pkgutil",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "PL"]
ignore = ["E203", "B008"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["oncotarget_lite"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true
mypy_path = "."

[tool.coverage.run]
branch = true
source = ["oncotarget_lite"]

[tool.coverage.report]
skip_covered = true
show_missing = true
precision = 2
fail_under = 7
